# PetPS

./: .gitignore  2026-01-25-fix-the-below-errors-without-changing-the-source-c.txt  2026-01-25-pxgnode1petps-mkdir-build-cd-build-cmake.txt  CHANGES_FROM_ORIGINAL.md  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  echo
.claude/: settings.local.json
Cityhash-prefix/tmp/: Cityhash-cfgcmd.txt  Cityhash-gitclone.cmake
benchmark/: bench.py  bench_base.py  exp_config.py  run_benchmark.sh  test_memcached.sh
docs/: pure_dram.md
src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/base/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
src/benchmark/: CMakeLists.txt  CTestTestfile.cmake  Makefile  benchmark_client.cc  benchmark_client_common.h  cmake_install.cmake  perf_sgl.cc
src/kv_engine/: CMakeLists.txt  CTestTestfile.cmake  Makefile  PiBenchWrapperDash.cc  cmake_install.cmake  engine_dash.h  engine_fake.h  engine_hashapi.h  engine_map.h  engine_mappm.h  engine_multishard_map_pm.h  engine_pethash.h  kv_engine_register.cc  pm_allocator.h
src/memory/: CTestTestfile.cmake  Makefile  cmake_install.cmake  (+3 more)
src/pet_kv/: CMakeLists.txt  CTestTestfile.cmake  Makefile  PiBenchWrapper.cc  cmake_install.cmake  persistence.h  pet_hash.h  pet_kv.cc  pet_kv.h
test/: CTestTestfile.cmake  Makefile  cmake_install.cmake  kv_engine_test[1]_include.cmake  persist_memorypool_test[1]_include.cmake  persist_pet_hash_test[1]_include.cmake  petkv_multithread_test[1]_include.cmake
tools/: Dockerfile  deploy_petps_2node.sh  gen_dash_pmdk.sh  initMachines.py  install-dependences.sh  ps_clients  ps_servers  run_multiclient_test.sh  run_petps_2node.sh  run_small_bench_matrix.sh  set_large_mtu.sh
(+8 files in other folders)
